# pageyoink

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: DEPLOY.md  agent-loop.md  audit-tasks.md  competitive-analysis.md  completed-tasks.md  decisions.md  getting-started.md  landing-demo-mockup.html  launch-post.md  runbook.md  status.md  tasks.md  tasks2.md  trial-improvements.md
mcp-server/: README.md  package-lock.json  package.json  run.sh  tsconfig.json
mcp-server/src/: index.ts
scripts/: test-auto-optimize.ts
sdk/: package.json  tsconfig.json
sdk-go/: go.mod  pageyoink.go
sdk-python/: pyproject.toml
sdk-python/pageyoink/: __init__.py  client.py
sdk/src/: index.ts
src/: app.ts  index.ts
src/middleware/: auth.ts
src/routes/: annotate.ts  archive.ts  batch.ts  diff.ts  extract.ts  health.ts  landing.ts  metadata.ts  og-image.ts  page.ts  pdf.ts  screenshot.ts  structured.ts  trial.ts  usage.ts
src/services/: adblock.ts  annotate.ts  archive.ts  browser.ts  cache.ts  cleanup.ts  database.ts  diff.ts  extract.ts  json-cache.ts  lazy-load.ts  metadata.ts  page-analysis.ts  pdf.ts  (+10 more)
tests/: archive.test.ts  auth.test.ts  batch.test.ts  cache.test.ts  cleanup.test.ts  diff.test.ts  extract.test.ts  health.test.ts  integration.test.ts  landing.test.ts  metadata.test.ts  no-named-functions.test.ts  og-image.test.ts  page.test.ts  pdf.test.ts  screenshot.test.ts  ssrf.test.ts  structured.test.ts  trial.test.ts  usage.test.ts  watermark.test.ts
(+5 files in other folders)
