[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pageyoink"
version = "0.1.0"
description = "Python SDK for the PageYoink screenshot, PDF, and OG image API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["screenshot", "pdf", "og-image", "api", "pageyoink"]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/claudiusbirdwhistle/pageyoink"
Documentation = "https://github.com/claudiusbirdwhistle/pageyoink/tree/main/sdk-python"
